@@ -1,7 +1,7 @@
 use ExtUtils::MakeMaker;
 WriteMakefile(
               'NAME' => 'WWW::Search::News',
-              'VERSION' => 1.02,
+              'VERSION' => 1.03,
               'PREREQ_PM' => {
                               'WWW::Search::Test' => 2.22,
                               'URI' => 0,
